more merge conflict resolution