@@ -1,59 +1,48 @@
 package uk.gov.hmcts.reform.finrem.caseorchestration.service;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.Before;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
-import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.BaseServiceTest;
 import uk.gov.hmcts.reform.finrem.caseorchestration.error.CourtDetailsParseException;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.AdditionalHearingDirectionsCollection;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocument;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DirectionOrder;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DraftDirectionOrder;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Element;
+import uk.gov.hmcts.reform.finrem.ccd.callback.AboutToStartOrSubmitCallbackResponse;
+import uk.gov.hmcts.reform.finrem.ccd.domain.DirectionOrder;
+import uk.gov.hmcts.reform.finrem.ccd.domain.DirectionOrderCollection;
+import uk.gov.hmcts.reform.finrem.ccd.domain.Document;
+import uk.gov.hmcts.reform.finrem.ccd.domain.DocumentCollection;
+import uk.gov.hmcts.reform.finrem.ccd.domain.FinremCaseData;
+import uk.gov.hmcts.reform.finrem.ccd.domain.FinremCaseDetails;
+import uk.gov.hmcts.reform.finrem.ccd.domain.HearingDirectionDetail;
+import uk.gov.hmcts.reform.finrem.ccd.domain.HearingDirectionDetailsCollection;
+import uk.gov.hmcts.reform.finrem.ccd.domain.JudgeType;
+import uk.gov.hmcts.reform.finrem.ccd.domain.YesOrNo;
 
+import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.nullValue;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.OrchestrationConstants.NO_VALUE;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.OrchestrationConstants.YES_VALUE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.AUTH_TOKEN;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CONTESTED_ORDER_APPROVED_DATE;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CONTESTED_ORDER_APPROVED_JUDGE_NAME;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CONTESTED_ORDER_APPROVED_JUDGE_TYPE;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HEARING_DIRECTION_DETAILS_COLLECTION;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HEARING_NOTICE_DOCUMENT_PACK;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HEARING_ORDER_COLLECTION;
 
 public class UploadApprovedOrderServiceTest extends BaseServiceTest {
-    private static final String JUDGE_TYPE = "TEST_TYPE";
+    private static final JudgeType JUDGE_TYPE = JudgeType.DEPUTY_DISTRICT_JUDGE;
     private static final String JUDGE_NAME = "TEST_NAME";
-    private static final String APPROVED_DATE = "DATE";
-
-    private static final String DRAFT_DIRECTION_ORDER_FILENAME = "draftDirectionOrder";
-    private static final String ORDER_URL = "orderUrl";
-    private static final String ORDER_BINARY_URL = "orderBinaryUrl";
+    private static final LocalDate APPROVED_DATE = LocalDate.of(2020, 1, 1);
 
     private static final String COURT_DETAILS_PARSE_EXCEPTION_MESSAGE = "Failed to parse court details.";
-
-    private static final String TEST_PURPOSE = "Testing";
 
     @MockBean
     private HearingOrderService hearingOrderService;
@@ -68,50 +57,41 @@ public class UploadApprovedOrderServiceTest extends BaseServiceTest {
     @Autowired
     private UploadApprovedOrderService uploadApprovedOrderService;
 
-    private CaseDetails caseDetails;
-
-    private DraftDirectionOrder draftDirectionOrder;
+    private FinremCaseDetails caseDetails;
 
     @Before
     public void setUp() {
-        caseDetails = buildCaseDetails();
-        caseDetails.getData().put(CONTESTED_ORDER_APPROVED_JUDGE_TYPE, JUDGE_TYPE);
-        caseDetails.getData().put(CONTESTED_ORDER_APPROVED_JUDGE_NAME, JUDGE_NAME);
-        caseDetails.getData().put(CONTESTED_ORDER_APPROVED_DATE, APPROVED_DATE);
-
-        draftDirectionOrder = DraftDirectionOrder.builder()
-            .purposeOfDocument(TEST_PURPOSE)
-            .uploadDraftDocument(CaseDocument.builder()
-                .documentUrl(ORDER_URL)
-                .documentBinaryUrl(ORDER_BINARY_URL)
-                .documentFilename(DRAFT_DIRECTION_ORDER_FILENAME).build())
-            .build();
+        caseDetails = buildFinremCaseDetails();
+        caseDetails.getCaseData().setOrderApprovedJudgeType(JUDGE_TYPE);
+        caseDetails.getCaseData().setOrderApprovedJudgeName(JUDGE_NAME);
+        caseDetails.getCaseData().setOrderApprovedDate(APPROVED_DATE);
 
         mapper = new ObjectMapper();
     }
 
     @Test
     public void givenAboutToStart_whenPrepareFieldsForApprovedLetter_thenRemoveFields() {
-        when(hearingOrderService.draftDirectionOrderCollectionTail(caseDetails))
-            .thenReturn(Optional.of(draftDirectionOrder));
+        caseDetails.getCaseData().setHearingNoticeDocumentPack(
+            Collections.singletonList(DocumentCollection.builder()
+                .value(Document.builder().build())
+                .build()));
+        FinremCaseData caseData = uploadApprovedOrderService.prepareFieldsForOrderApprovedCoverLetter(caseDetails);
 
-        Map<String, Object> caseData = uploadApprovedOrderService.prepareFieldsForOrderApprovedCoverLetter(caseDetails);
-
-        assertFalse(caseData.containsKey(CONTESTED_ORDER_APPROVED_JUDGE_TYPE));
-        assertFalse(caseData.containsKey(CONTESTED_ORDER_APPROVED_JUDGE_NAME));
-        assertFalse(caseData.containsKey(CONTESTED_ORDER_APPROVED_DATE));
-        assertFalse(caseData.containsKey(HEARING_NOTICE_DOCUMENT_PACK));
+        assertThat(caseData.getOrderApprovedJudgeType(), is(nullValue()));
+        assertThat(caseData.getOrderApprovedJudgeName(), is(nullValue()));
+        assertThat(caseData.getOrderApprovedDate(), is(nullValue()));
+        assertThat(caseData.getHearingNoticeDocumentPack(), is(nullValue()));
     }
 
     @Test
-    public void givenNoExceptions_whenHandleUploadApprovedOrderAboutToSubmit_thenReturnValidatedResponse() throws JsonProcessingException {
-        caseDetails.getData().put(HEARING_ORDER_COLLECTION, getDirectionOrderCollection());
-        setHearingDirectionDetailsCollection(YES_VALUE);
+    public void givenNoExceptions_whenHandleUploadApprovedOrderAboutToSubmit_thenReturnValidatedResponse() {
+        caseDetails.getCaseData().setUploadHearingOrder(getDirectionOrderCollection());
+        setHearingDirectionDetailsCollection(YesOrNo.YES);
         uploadApprovedOrderService.handleUploadApprovedOrderAboutToSubmit(caseDetails, AUTH_TOKEN);
 
         verify(hearingOrderService, times(1))
             .updateCaseDataForLatestHearingOrderCollection(any(), any());
-        verify(genericDocumentService, times(1)).convertDocumentIfNotPdfAlready(any(), eq(AUTH_TOKEN));
+        verify(genericDocumentService, times(1)).convertDocumentIfNotPdfAlready(isA(Document.class), eq(AUTH_TOKEN));
         verify(contestedOrderApprovedLetterService, times(1))
             .generateAndStoreContestedOrderApprovedLetter(caseDetails, AUTH_TOKEN);
         verify(additionalHearingDocumentService, times(1))
@@ -124,13 +104,13 @@ public class UploadApprovedOrderServiceTest extends BaseServiceTest {
 
     @Test
     public void givenNoExceptions_whenHandleAboutToSubmitAndNoNextHearing_thenDoNotGenerateDocumentPack() {
-        caseDetails.getData().put(HEARING_ORDER_COLLECTION, getDirectionOrderCollection());
-        setHearingDirectionDetailsCollection(NO_VALUE);
+        caseDetails.getCaseData().setUploadHearingOrder(getDirectionOrderCollection());
+        setHearingDirectionDetailsCollection(YesOrNo.NO);
         uploadApprovedOrderService.handleUploadApprovedOrderAboutToSubmit(caseDetails, AUTH_TOKEN);
 
         verify(hearingOrderService, times(1))
             .updateCaseDataForLatestHearingOrderCollection(any(), any());
-        verify(genericDocumentService, times(1)).convertDocumentIfNotPdfAlready(any(), eq(AUTH_TOKEN));
+        verify(genericDocumentService, times(1)).convertDocumentIfNotPdfAlready(isA(Document.class), eq(AUTH_TOKEN));
         verify(contestedOrderApprovedLetterService, times(1))
             .generateAndStoreContestedOrderApprovedLetter(caseDetails, AUTH_TOKEN);
         verify(additionalHearingDocumentService, times(1))
@@ -142,11 +122,11 @@ public class UploadApprovedOrderServiceTest extends BaseServiceTest {
     }
 
     @Test
-    public void givenExceptions_whenHandleUploadApprovedOrderAboutToSubmit_thenReturnResponseWithErrors() throws JsonProcessingException {
+    public void givenExceptions_whenHandleUploadApprovedOrderAboutToSubmit_thenReturnResponseWithErrors() {
         doThrow(new CourtDetailsParseException()).when(additionalHearingDocumentService)
             .createAndStoreAdditionalHearingDocumentsFromApprovedOrder(AUTH_TOKEN, caseDetails);
+        caseDetails.getCaseData().setUploadHearingOrder(getDirectionOrderCollection());
 
-        caseDetails.getData().put(HEARING_ORDER_COLLECTION, getDirectionOrderCollection());
         AboutToStartOrSubmitCallbackResponse response = uploadApprovedOrderService
             .handleUploadApprovedOrderAboutToSubmit(caseDetails, AUTH_TOKEN);
 
@@ -155,26 +135,25 @@ public class UploadApprovedOrderServiceTest extends BaseServiceTest {
 
         verify(hearingOrderService, times(1))
             .updateCaseDataForLatestHearingOrderCollection(any(), any());
-        verify(genericDocumentService, times(1)).convertDocumentIfNotPdfAlready(any(), eq(AUTH_TOKEN));
+        verify(genericDocumentService, times(1)).convertDocumentIfNotPdfAlready(isA(Document.class), eq(AUTH_TOKEN));
         verify(contestedOrderApprovedLetterService, times(1))
             .generateAndStoreContestedOrderApprovedLetter(caseDetails, AUTH_TOKEN);
     }
 
-    private List<Element<DirectionOrder>> getDirectionOrderCollection() {
+    private List<DirectionOrderCollection> getDirectionOrderCollection() {
         DirectionOrder directionOrder = DirectionOrder.builder()
-            .uploadDraftDocument(CaseDocument.builder()
-                .documentFilename("directionOrder.pdf").documentBinaryUrl("aBinaryurl").build()).build();
+            .uploadDraftDocument(Document.builder()
+                .filename("directionOrder.pdf").binaryUrl("aBinaryurl").build()).build();
 
-        return List.of(Element.element(UUID.randomUUID(), directionOrder));
+        return Collections.singletonList(DirectionOrderCollection.builder().value(directionOrder).build());
     }
 
-    private void setHearingDirectionDetailsCollection(String value) {
-        caseDetails.getData().put(HEARING_DIRECTION_DETAILS_COLLECTION,
-            buildAdditionalHearingDetailsCollection(value));
+    private void setHearingDirectionDetailsCollection(YesOrNo value) {
+        caseDetails.getCaseData().setHearingDirectionDetailsCollection(buildAdditionalHearingDetailsCollection(value));
     }
 
-    private List<Element<AdditionalHearingDirectionsCollection>> buildAdditionalHearingDetailsCollection(String value) {
-        return List.of(Element.element(UUID.randomUUID(), AdditionalHearingDirectionsCollection.builder()
-            .isAnotherHearingYN(value).build()));
+    private List<HearingDirectionDetailsCollection> buildAdditionalHearingDetailsCollection(YesOrNo value) {
+        return List.of(HearingDirectionDetailsCollection.builder().value(HearingDirectionDetail.builder()
+            .isAnotherHearingYN(value).build()).build());
     }
 }
